Make compatible with older packages